# lightning-mpp-simulator

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: coverage.yml  lint.yml  test.yml
data/: README.md  betweenness-centrality-20210906.txt  degree-centrality-20210906.txt  lngraph_2022_01_28__20_00.json
docs/: 404.html  charts.html  index.html
docs/assets/: Path length (failed).html  Path length.html  diversity.html  fees.html  htlc.html  htlcs.html  observation_rate_successful.html  parts.html  path_length_failed.html  pred_guesses.html  prone_paths.html  prone_paths_successful.html  prone_payments.html  prone_payments_successful.html  success.html  success_rate.html  successful_hits.html  total_hits.html
docs/css/: styles.css
docs/js/: scripts.js
eval/: adversaries.py  anonymity.py  constants.py  fees.py  graph.py  htlc_attempts.py  levenshtein.py  path_length.py  plot_all.py  requirements.txt  splits.py  success_rate.py
graph-diversity/: Cargo.toml
graph-diversity/src/: io.rs  main.rs  total_diversity.rs
network-parser/: Cargo.toml  README.md  main.rs.tmp
network-parser/examples/: main.rs
network-parser/src/: helpers.rs  lib.rs
scripts/: batch_simulations.sh  rank.py
simulator/: Cargo.toml  README.md
simulator/src/: lib.rs
simulator/src/core_types/: event.rs  graph.rs  mod.rs  time.rs
simulator/src/io/: mod.rs  output.rs
simulator/src/payments/: attempt.rs  mod.rs  payment.rs  shard.rs
simulator/src/sim/: mod.rs  simulator.rs
simulator/src/stats/: adversaries.rs  deanonymisation.rs  distance.rs  diversity.rs  failures.rs  mod.rs  resillience.rs
simulator/src/traversal/: mod.rs  mpp.rs  path.rs  path_finder.rs  pathfinding.rs  route.rs  single.rs
test_data/: lnbook_example.json  trivial.json  trivial_connected.json  trivial_multipath.json
