[package]
name = "graph-diversity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-simulator = {path = "../simulator"}
network-parser = {path = "../network-parser"}
log = "0.4"
env_logger = "0.7"
pathfinding = "3.0.14"
clap = { version = "4.0.22", features = ["derive"]}
itertools = "0.10.5"

[[bin]]
name = "main"
path = "src/main.rs"
