[package]
name = "graph-diversity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-simulator = {path = "../simulator"}
network-parser = {path = "../network-parser"}
log = "0.4"
env_logger = "0.11"
pathfinding = "4.3.0"
clap = { version = "4.0.22", features = ["derive"]}
itertools = "0.13.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rayon = "1.6"

[[bin]]
name = "graph-diversity"
path = "src/main.rs"
