[package]
name = "network-parser"
version = "0.1.0"
#repository = ""
authors = ["Charmaine Ndolo <c.n.ndolo@hu-berlin.de>"]
description = "Read the LN's topology from a JSON file."
#keywords = []
license = "MIT"
readme = "./README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = "2.0.1"
