[package]
name = "network-parser"
version = "0.2.0"
#repository = ""
authors = ["Charmaine Ndolo <charmaine.ndolo@tu-dresden.de>"]
description = "Read the LN's topology from a JSON file."
keywords = ["lightning-network", "graph"]
license = "MIT"
readme = "./README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde-aux = "4.2"
clap = { version = "4.0.22", features = ["derive"]}
log = "0.4"

[dev-dependencies]
tempfile = "3.3.0"
