[package]
name = "lightning-simulator"
version = "0.1.0"
edition = "2021"
default-run = "lightning-simulator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network-parser = {path = "../network-parser"}
log = "0.4"
env_logger = "0.11"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
pathfinding = "4.3.0"
clap = { version = "4.0.22", features = ["derive"]}
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = ["small_rng", "alloc"]}
chrono = {version = "0.4", features = ["clock"]}
itertools = "0.13.0"
ordered-float = "4.1.0"
rayon = "1.6"

[[bin]]
name = "lightning-simulator"
path = "src/bin/simulation.rs"

[[bin]]
name = "batch-simulator"
path = "src/bin/batch_simulator.rs"

[lib]
name = "simlib"

[dev-dependencies]
approx = "0.5"
